--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "metaname-certbot"
+name = "certbot_dns_metaname"
 version = "0.1.0"
 description = ""
 authors = ["Taylor Kettle <tin.teapot@gmail.com>"]
