--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Taylor Kettle <tin.teapot@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 certbot = "^0.34"
+acme="^0.29.0"
+requests="*"
 mock = "^4.0.3"
 requests-mock = "^1.9.3"
 
